[tool.poetry]
name = "slock"
version = "0.1.0"
description = "Simple AI API using FastAPI and Langchain"
authors = ["Mitch Murphy <mitch.murphy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
langchain = "^0.1.13"
pydantic = "^2.6.4"
uvicorn = "^0.29.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
pyre = "^1.12.4"
pytest = "^8.1.1"
pyflakes = "^3.2.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
